// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorStatusBar component renders 1`] = `
Array [
  <div
    class="euiSpacer euiSpacer--s"
  />,
  <div
    aria-label="SSL certificate expires in 2 months"
    class="euiText euiText--small euiText--constrainedWidth"
  >
    SSL certificate expires 
    <span
      class="euiBadge euiBadge--iconLeft euiBadge--default"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          in 2 months
        </span>
      </span>
    </span>
  </div>,
]
`;

exports[`MonitorStatusBar component renders expiring data if date is less than 30 days 1`] = `
<MonitorSSLCertificate
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  tls={
    Object {
      "certificate_not_valid_after": "Tue Jan 28 2020 17:57:18 GMT+0100",
    }
  }
>
  <EuiSpacer
    size="s"
  >
    <div
      className="euiSpacer euiSpacer--s"
    />
  </EuiSpacer>
  <EuiText
    aria-label="SSL certificate expires in 15 days"
    grow={false}
    size="s"
  >
    <div
      aria-label="SSL certificate expires in 15 days"
      className="euiText euiText--small euiText--constrainedWidth"
    >
      <FormattedMessage
        defaultMessage="SSL certificate expires {emphasizedText}"
        id="xpack.uptime.monitorStatusBar.sslCertificateExpiry.badgeContent"
        values={
          Object {
            "emphasizedText": <EuiBadge
              color="warning"
            >
              in 15 days
            </EuiBadge>,
          }
        }
      >
        SSL certificate expires 
        <EuiBadge
          color="warning"
        >
          <EuiInnerText>
            <span
              className="euiBadge euiBadge--iconLeft euiBadge--warning"
              title="in 15 days"
            >
              <span
                className="euiBadge__content"
              >
                <span
                  className="euiBadge__text"
                >
                  in 15 days
                </span>
              </span>
            </span>
          </EuiInnerText>
        </EuiBadge>
      </FormattedMessage>
    </div>
  </EuiText>
</MonitorSSLCertificate>
`;

exports[`MonitorStatusBar component renders expiring state if validity is greater than 30 days 1`] = `
<MonitorSSLCertificate
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  tls={
    Object {
      "certificate_not_valid_after": "Sat Feb 22 2020 17:57:18 GMT+0100",
    }
  }
>
  <EuiSpacer
    size="s"
  >
    <div
      className="euiSpacer euiSpacer--s"
    />
  </EuiSpacer>
  <EuiText
    aria-label="SSL certificate expires in a month"
    grow={false}
    size="s"
  >
    <div
      aria-label="SSL certificate expires in a month"
      className="euiText euiText--small euiText--constrainedWidth"
    >
      <FormattedMessage
        defaultMessage="SSL certificate expires {emphasizedText}"
        id="xpack.uptime.monitorStatusBar.sslCertificateExpiry.badgeContent"
        values={
          Object {
            "emphasizedText": <EuiBadge
              color="default"
            >
              in a month
            </EuiBadge>,
          }
        }
      >
        SSL certificate expires 
        <EuiBadge
          color="default"
        >
          <EuiInnerText>
            <span
              className="euiBadge euiBadge--iconLeft euiBadge--default"
              title="in a month"
            >
              <span
                className="euiBadge__content"
              >
                <span
                  className="euiBadge__text"
                >
                  in a month
                </span>
              </span>
            </span>
          </EuiInnerText>
        </EuiBadge>
      </FormattedMessage>
    </div>
  </EuiText>
</MonitorSSLCertificate>
`;

exports[`MonitorStatusBar component renders null if invalid date 1`] = `null`;
